--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="/"><i class="fas fa-home me-1"></i>Dashboard</a>
                 <a class="nav-link" href="/scan"><i class="fas fa-search me-1"></i>Scan URL</a>
+                <a class="nav-link" href="/history"><i class="fas fa-history me-1"></i>History</a>
             </div>
         </div>
     </nav>
